test/should_pass/enum_002.grg
actions enum_002 using enum_model_002;

rule r {
	pattern {
		a:A -b:B-> a;
	}
	modify {
		eval {
			a.e = b.e;
			b.i = (int)a.e;
			b.e = te::a;
		}
	}
}

